--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,29 +89,30 @@ jobs:
           ./artifacts/*
         body_path: ./CHANGELOG.md
         draft: false
+        token: ${{ secrets.CUSTOM_GITHUB_TOKEN }}
 
-  docker-build:
-    runs-on: ubuntu-latest
-    name: Build the docker image
-    steps:
-      - name: Login to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB }}
+  # docker-build:
+  #   runs-on: ubuntu-latest
+  #   name: Build the docker image
+  #   steps:
+  #     - name: Login to GitHub Container Registry
+  #       uses: docker/login-action@v3
+  #       with:
+  #         registry: ghcr.io
+  #         username: ${{ github.repository_owner }}
+  #         password: ${{ secrets.GITHUB }}
 
-      - name: Checkout
-        uses: actions/checkout@v4
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Build Image
-        run: make image IMAGE=ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+  #     - name: Build Image
+  #       run: make image IMAGE=ghcr.io/${{env.REPO}}:${{ github.ref_name }}
 
-      - name: Tag latest
-        run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
+  #     - name: Tag latest
+  #       run: docker tag ghcr.io/${{env.REPO}}:${{ github.ref_name }} ghcr.io/${{env.REPO}}:latest
 
-      - name: Push
-        run: docker push ghcr.io/${{env.REPO}}:${{ github.ref_name }}
+  #     - name: Push
+  #       run: docker push ghcr.io/${{env.REPO}}:${{ github.ref_name }}
 
-      - name: Push Latest
-        run: docker push ghcr.io/${{env.REPO}}:latest
+  #     - name: Push Latest
+  #       run: docker push ghcr.io/${{env.REPO}}:latest
